--- a/APEX/Projeto-WebSite-APEX1/style.css
+++ b/APEX/Projeto-WebSite-APEX1/style.css
@@ -1,8 +1,53 @@
 *{
     margin: 0;
-    padding: 0;    
+    padding: 0;
+    list-style: none;
+    text-decoration: none; 
 }
 
+/*Menu*/
+.hamburguer{
+    width: 2rem;
+    height: 2rem;
+    position: fixed;
+    z-index: 100;
+    right: 2rem;
+    top: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    cursor: pointer;
+   
+}
+
+.show-menu .hamburguer{
+    right: 16rem;
+    transition: all 1s;
+}
+
+.line {
+    width: 100%;
+    height: .1rem;
+    background-color: #fff;
+    box-shadow: 0.1rem 0.1rem 1px #000;
+    transition: 0.3s;
+}
+.show-menu #line1{
+    transform: rotate(-45deg) translate(-8px, 8px);
+}
+
+.show-menu #line2 {
+    opacity: 0;
+    visibility: hidden;
+}
+
+.show-menu #line3{
+    transform: rotate(45deg) translate(-5px, -7px);
+}
+
+/*Menu*/
+
+/*Banner*/
 header{
     width: 100%;
     height: 100vh;
@@ -34,7 +79,7 @@ header{
 .banner h1{
     color: #ffffff;
     font-size: 3.5rem;
-    font-family: "Baloo Da 2", serif;
+    font-family: var(--font-primary);
     font-weight: 200;
     text-shadow: .2rem .4rem 2px rgba(0,0,0,0.4);
     line-height: 3.5rem;
@@ -44,7 +89,7 @@ header{
 }
 
 .banner p {
-    font-size: "Josefin Slab", serif ;
+    font-size: var(--font-secundary);
     color: #fff;
     font-size: 2rem;
     text-shadow: .2rem .2rem rgba(0,0,0,0.4);
@@ -55,7 +100,7 @@ header{
 }
 
 .banner button {
-    font-family: "Muli", serif;
+    font-family: var(--font-action);
     color: #ffffff;
     font-size: 1.2rem;
     text-transform: uppercase;
@@ -74,5 +119,66 @@ header{
 .banner button:hover{
     opacity: 0.8;
 }
+/*Banner*/
 
+/*Links do Menu*/
+.sidebar{
+    width: 20rem;
+    height: 100vh;
+    background-color: #fff;
+    position: fixed;
+    top: 0;
+    right: -20rem;
+    transition: all 1s;
+}
 
+.show-menu .sidebar{
+    right: 0;
+}
+
+.menu{
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.menu-item{
+    text-align: center;
+    margin-bottom: .5rem;
+}
+
+.menu-link{
+    font-family: var(--font-action);
+    font-size: 2rem;
+    color: #555;
+    transition: color 1s;
+}
+
+.menu-link:hover{
+    color:#C6426E
+}
+
+.social-media{
+    position: absolute;
+    bottom: 2rem;
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.social-media i {
+    color: #555;
+    height: 2.5rem;
+    width: 2.5rem;
+    font-size: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    transition: 60ms;
+}
+
+.social-media i:hover{
+    color: #C6426E;   
+}
