--- a/APEX/Projeto-WebSite-APEX1/style.css
+++ b/APEX/Projeto-WebSite-APEX1/style.css
@@ -119,6 +119,10 @@ header{
 .banner button:hover{
     opacity: 0.8;
 }
+
+.banner button a {
+    color:#ffffff
+}
 /*Banner*/
 
 /*Links do Menu*/
@@ -182,3 +186,110 @@ header{
 .social-media i:hover{
     color: #C6426E;   
 }
+
+/*Conhecimentos*/
+.conhecimentos{
+    display: grid;
+    grid-template-columns: repeat(16, 1fr);
+    grid-template-rows: repeat(6, 6rem);
+    row-gap: .5rem;
+}
+
+.conhecimento:nth-child(1){
+    grid-column: 4/7;
+    grid-row: 1/3;
+}
+
+.conhecimento:nth-child(2){
+    grid-column: 3/6;
+    grid-row: 3/5;
+}
+
+.conhecimento:nth-child(3){
+    grid-column: 4/7;
+    grid-row: 5/-1;
+}
+
+.conhecimento:nth-child(4){
+    grid-column: 11/14;
+    grid-row: 1/3;
+}
+
+.conhecimento:nth-child(5){
+    grid-column: 12/15;
+    grid-row: 3/5;
+}
+
+.conhecimento:nth-child(6){
+    grid-column: 11/14;
+    grid-row: 5/-1;
+}
+
+.sessao-conhecimentos{
+    background-color: rgb(121, 116, 116);
+}
+
+.sessao-header{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.sessao-header h1{
+    font-family: var(--font-primary);
+    font-size: 3rem;
+    color: #555;
+    margin-bottom: .5rem;
+}
+.sessao-header h2{
+    font-family: var(--font-primary);
+    font-size: 3rem;
+    color: #555;
+    border-bottom: solid 3px #C6426E;
+    margin-bottom: 2rem;
+}
+
+.conhecimento-header{
+    display: flex;
+    align-items: center;
+    color: #555;
+}
+
+.conhecimento-header i{
+    font-size: 2.5rem;    
+}
+
+.conhecimento-header h3 {
+    font-family: var(--font-secundary);
+    font-size: 1.5rem;
+    padding-left: 1rem;
+}
+
+.conhecimento-text{
+    font-family: var(--font-secundary);
+    margin-top: 1rem;
+}
+
+/*Conhecimentos*/
+
+/*Imagem LGPD*/
+.conhecimentos-img-wrapper{
+    grid-column: 7/11;
+    grid-row: 3/7;
+    width: 100%;
+}
+
+.conhecimentos-img-wrapper img {
+    object-fit: cover;
+    width: 100% ;
+}
+/*Imagem LGPD*/
+
+
+
+
+
+
+
+/*Conhecimentos*/
