--- a/APEX/Projeto-WebSite-APEX1/responsive.css
+++ b/APEX/Projeto-WebSite-APEX1/responsive.css
@@ -25,3 +25,20 @@
 
 }
 /* animação do Título*/
+
+/* footer*/
+
+@media(max-width:950px){
+    footer {
+        flex-direction: column;        
+    }
+
+    footer .boxs {
+        width: 100%;
+        text-align: center;
+    }
+
+    footer .boxs:nth-child(4){
+        width: 100%;
+    }
+}
